[package]
name = "zlaunch"
version = "0.1.0"
authors = ["Aram Drevekenin <aram@poor.dev>"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
zellij-tile = { git = "https://github.com/zellij-org/zellij", version = "0.41.0" } # TODO: CHANGEME
# zellij-tile = { path = "/home/aram/code/zellij/zellij-tile", version = "0.41.0" }
chrono = "0.4.0"
kdl = "*" # TODO: CHANGEME
